# csshd

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
plans/: PHASE-0-helpdesk-bearer-auth.md
src/: auth.rs  client.rs  config.rs  credentials.rs  format.rs  main.rs  tui.rs
src/commands/: claim.rs  close.rs  comment.rs  list.rs  login.rs  logout.rs  mod.rs  view.rs  whoami.rs
