[package]
name = "csshd"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
description = "Terminal client for the CSS IT Helpdesk"
license = "MIT"
repository = "https://github.com/css-md/csshd"
authors = ["Nick Robb <nrobb@css-md.org>"]
readme = "README.md"

[[bin]]
name = "csshd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "signal"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
anyhow = "1"
directories = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
url = "2"
# TUI (Phase 2 — pulled in early so the workspace resolves consistently)
ratatui = { version = "0.28", default-features = false, features = ["crossterm"] }
crossterm = "0.28"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# ─── cargo-dist (run `cargo dist init` once Rust is installed locally) ────────
# This block is a placeholder; `dist init` will overwrite/extend it.
# When you're ready: `cargo install cargo-dist` then `cargo dist init`.
[package.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
installers = ["shell", "powershell"]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
install-path = "CARGO_HOME"
